--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "core-js": "^3.25.3",
+    "element-ui": "^2.15.14",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {}
 }
